<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/SCREEN"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".SettingsPage">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:padding="14dp"
            android:src="@drawable/back_btn"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/param_tres"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/parametre"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/param_tres_2"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:background="@drawable/round_back_whille10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!-- Dark Mode / Night Mode -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TEXT">

                    <ImageView
                        android:id="@+id/nightModeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/baseline_dark_mode_24"
                        android:padding="10dp"
                        tools:ignore="ImageContrastCheck"
                        android:importantForAccessibility="yes" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/mode_sombre"
                        style="@style/TEXT"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/nightModeIcon"
                        tools:ignore="RelativeOverlap" />


                </RelativeLayout>

                <!-- Notifications-->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/notificationIcon"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12dp"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/notifications"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/notificationIcon"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_whille10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!-- Security -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/securityIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/round_back_security"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/s_curit_et_confidentialit"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/securityIcon"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:importantForAccessibility="no"
                        android:id="@+id/security"/>
                </RelativeLayout>


                <!-- Languages -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/languageIcon"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notifications"
                        android:padding="12dp"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/langue"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/languageIcon"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:importantForAccessibility="no"
                        android:id="@+id/langue_acess"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_back_whille10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <!-- Log Out -->
                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent"
                    >

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/logOutIcon"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_security"
                        android:padding="12dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/arr_ter_l_application"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/logOutIcon"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:importantForAccessibility="no"
                        android:src="@drawable/right_arrow_icon"
                        android:id="@+id/quitAppIcon"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>